--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,8 @@ dependencies:
   dio: ^4.0.6
   cached_network_image: ^3.2.0
   just_audio: ^0.9.28
-  #audio_service: ^0.18.7
+  audio_service: ^0.18.7
+  get_it: ^7.2.0
 
 dev_dependencies:
   flutter_test:
